# minishell

./: CMakeLists.txt  Makefile  cd.c  change_env.c  create_env.c  echo.c  find_arg.c  impl_cmds.c  main.c  minishell.h  notrue_main.c  pwd.c  read_cmdline.c  run_cmd.c  setenv.c  size_dac.c  source_cd.c  source_free.c  source_implcmds.c  source_myexe.c  source_runcmd.c  source_runcmd2.c  source_runcmd3.c  unsetenv.c
FT_PRINTF/: Makefile  double_str.c  format_c.c  format_f.c  format_i.c  format_o.c  format_o_help.c  format_p.c  format_p_help.c  format_percent.c  format_s.c  format_u.c  format_x.c  format_x_help.c  format_xx.c  ft_itoa_lli.c  ft_itoa_ull.c  ft_pow.c  ft_printf.h  ft_printf_help.c  main.c  print_ap.c  source_format_di.c  source_format_o.c  source_format_x.c  source_i.c  source_main.c  source_main_help.c
FT_PRINTF/LIBFT/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  (+14 more)
